feat: implement menu hiding on functionality style

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -18,7 +18,7 @@
                     <p class="shelter">Shelter for pets in Boston</p>
                 </div>
             </a>
-            <nav class="menu">
+            <nav class="menu-desktop">
                 <ul class="menu-list">
                     <li><a class="activeMain" href="#">About the shelter</a></li>
                     <li><a href="../our-pets/index.html">Our pets</a></li>
@@ -225,6 +225,6 @@
         </footer>
     </div>
     
-    <script src="../main/script.js"></script>
+    <script src="../main/script.js" type="module"></script>
 </body>
 </html>
