--- a/shelter/pages/our-pets/index.html
+++ b/shelter/pages/our-pets/index.html
@@ -119,6 +119,6 @@
         </footer>
     </div>
 
-    <script src="../our-pets/script.js"></script>
+    <script src="../our-pets/script.js" type="module"></script>
 </body>
 </html>
