feat: implement the mobile menu for the second page

--- a/shelter/pages/our-pets/index.html
+++ b/shelter/pages/our-pets/index.html
@@ -18,7 +18,7 @@
                     <p class="shelter">Shelter for pets in Boston</p>
                 </div>
             </a>
-            <nav class="menu">
+            <nav class="menu-desktop">
                 <ul class="menu-list">
                     <li><a href="../main/index.html">About the shelter</a></li>
                     <li><a class="activePets" href="../our-pets/index.html">Our pets</a></li>
